# CV-Generator

./: .gitignore  .isort.cfg  .travis.yml  CONTRIBUTING.md  Procfile  README.md  credentials.txt  db.sqlite3  manage.py  pyproject.toml  readme.md  requirements.txt  test-requirements.txt  tox.ini
API/: views.py
CVGen/: requirements.txt  settings.py  urls.py  wsgi.py
Webapp/: models.py  views.py
Webapp/migrations/: 0001_initial.py
Webapp/static/css/: bootstrap.css
Webapp/templates/: fillform.html  footer.html  good_resume.html  header.html  index.html  logout.html  read_docs.html  signin.html  signup.html  signupdata.html
Webapp/templates/webpages/: 404.html  fillform.html  signup.html  signupdata.html
api/: README.md  urls.py  views.py
webapp/: apps.py  models.py  urls.py  views.py
webapp/migrations/: 0001_initial.py  0002_auto_20180617_2059.py  0003_auto_20180618_0327.py  0004_auto_20180618_0329.py  0005_auto_20180618_0329.py  0006_auto_20180618_0329.py  0007_auto_20180618_0331.py  0008_auto_20180618_0332.py  0009_auto_20180618_2135.py  0010_auto_20180618_2213.py  0011_auto_20180618_2213.py  0012_auto_20180618_2238.py  0013_auto_20180619_0423.py  0014_auto_20180619_0426.py  0015_auto_20180619_0432.py  0016_auto_20180619_0442.py  0017_auto_20180619_0451.py  0018_auto_20180626_1218.py
webapp/static/css/: custom_css.css
webapp/templates/webpages/: 404.html  dashboard.html  fillform.html  good_resume.html  header.html  hotel_results.html  index.html  logout.html  read_docs.html  results.html  resume.html  signin.html  signup.html  signupdata.html
